src/test/kotlin/com/demonwav/mcdev/platform/mixin/implements/DuplicateInterfacePrefixInspectionTest.kt
/*
 * Minecraft Dev for IntelliJ
 *
 * https://minecraftdev.org
 *
 * Copyright (c) 2018 minecraft-dev
 *
 * MIT License
 */

package com.demonwav.mcdev.platform.mixin.implements

import com.demonwav.mcdev.platform.mixin.BaseMixinTest
import com.demonwav.mcdev.platform.mixin.inspection.implements.DuplicateInterfacePrefixInspection
import org.intellij.lang.annotations.Language

class DuplicateInterfacePrefixInspectionTest : BaseMixinTest() {

    override fun setUp() {
        super.setUp()

        buildProject {
            src {
                java("test/DummyFace.java", """
                    package test;

                    interface DummyFace {

                    }
                """)

                java("test/DummyFace2.java", """
                    package test;

                    interface DummyFace2 {

                    }
                """)
            }
        }
    }

    private fun doTest(@Language("JAVA") mixinCode: String) {
        buildProject {
            src {
                java("test/DuplicateInterfacePrefixMixin.java", mixinCode)
            }
        }

        myFixture.enableInspections(DuplicateInterfacePrefixInspection::class.java)
        myFixture.checkHighlighting(true, false, false)
    }

    fun `test no highlight on no duplicate interface prefix`() {
        doTest("""
            package test;

            import org.spongepowered.asm.mixin.Mixin;
            import org.spongepowered.asm.mixin.Implements;
            import org.spongepowered.asm.mixin.Interface;

            @Mixin
            @Implements({
                @Interface(iface = DummyFace.class, prefix = "a$"),
                @Interface(iface = DummyFace2.class, prefix = "b$")
            })
            class DuplicateInterfacePrefixMixin {

            }
        """)
    }

    fun `test highlight on duplicate interface prefix`() {
        doTest("""
            package test;

            import org.spongepowered.asm.mixin.Mixin;
            import org.spongepowered.asm.mixin.Implements;
            import org.spongepowered.asm.mixin.Interface;

            @Mixin
            @Implements({
                @Interface(iface = DummyFace.class, prefix = "a$"),
                @Interface(iface = DummyFace2.class, prefix = <error descr="Duplicate prefix 'a$'">"a$"</error>)
            })
            class DuplicateInterfacePrefixMixin {

            }
        """)
    }
}
